--- a/seq2seq/Addition_LSTM.ipynb
+++ b/seq2seq/Addition_LSTM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,11 @@
     "from random import randint\n",
     "from numpy import array\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
+    "from keras.layers import Dense, TimeDistributed, RepeatVector, Flatten\n",
     "from keras.layers import LSTM\n",
     "from math import sqrt\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from numpy import argmax"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,15 +398,367 @@
    "source": [
     "That is, the order of the input no longer matters. We could shuffle it up any way we want and still learn the problem.\n",
     "\n",
-    "MLPs are designed to learn mapping functions and can easily nail the problem of learning how to add numbers."
+    "**MLPs are designed to learn mapping functions** and can easily nail the problem of learning how to add numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frame as sequence\n",
+    "We can frame addition as an input and output string of characters and let the model figure out the meaning of the characters.\n",
+    "\n",
+    "The model must learn not only the integer nature of the characters, but also the nature of the mathematical operation to perform."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import seed\n",
+    "from random import randint\n",
+    "from math import ceil\n",
+    "from math import log10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 10]] [13]\n",
+      "[' 3+10'] ['13']\n",
+      "[[11, 3, 10, 1, 0]] [[1, 3]]\n",
+      "[[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]] [[[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate lists of random integers and their sum\n",
+    "def random_sum_pairs(n_examples, n_numbers, largest):\n",
+    "    X, y = list(), list()\n",
+    "    for i in range(n_examples):\n",
+    "        in_pattern = [randint(1,largest) for _ in range(n_numbers)]\n",
+    "        out_pattern = sum(in_pattern)\n",
+    "        X.append(in_pattern)\n",
+    "        y.append(out_pattern)\n",
+    "    return X, y\n",
+    "\n",
+    "# convert data to strings\n",
+    "def to_string(X, y, n_numbers, largest):\n",
+    "    max_length = n_numbers * ceil(log10(largest+1)) + n_numbers - 1\n",
+    "    Xstr = list()\n",
+    "    for pattern in X:\n",
+    "        strp = '+'.join([str(n) for n in pattern])\n",
+    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
+    "        Xstr.append(strp)\n",
+    "    max_length = ceil(log10(n_numbers * (largest+1)))\n",
+    "    ystr = list()\n",
+    "    for pattern in y:\n",
+    "        strp = str(pattern)\n",
+    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
+    "        ystr.append(strp)\n",
+    "    return Xstr, ystr\n",
+    "\n",
+    "# integer encode strings\n",
+    "def integer_encode(X, y, alphabet):\n",
+    "    char_to_int = dict((c, i) for i, c in enumerate(alphabet))\n",
+    "    Xenc = list()\n",
+    "    for pattern in X:\n",
+    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
+    "        Xenc.append(integer_encoded)\n",
+    "    yenc = list()\n",
+    "    for pattern in y:\n",
+    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
+    "        yenc.append(integer_encoded)\n",
+    "    return Xenc, yenc\n",
+    " \n",
+    "# one hot encode\n",
+    "def one_hot_encode(X, y, max_int):\n",
+    "    Xenc = list()\n",
+    "    for seq in X:\n",
+    "        pattern = list()\n",
+    "        for index in seq:\n",
+    "            vector = [0 for _ in range(max_int)]\n",
+    "            vector[index] = 1\n",
+    "            pattern.append(vector)\n",
+    "        Xenc.append(pattern)\n",
+    "    yenc = list()\n",
+    "    for seq in y:\n",
+    "        pattern = list()\n",
+    "        for index in seq:\n",
+    "            vector = [0 for _ in range(max_int)]\n",
+    "            vector[index] = 1\n",
+    "            pattern.append(vector)\n",
+    "        yenc.append(pattern)\n",
+    "    return Xenc, yenc\n",
+    " \n",
+    "seed(1)\n",
+    "n_samples = 1\n",
+    "n_numbers = 2\n",
+    "largest = 10\n",
+    "# generate pairs\n",
+    "X, y = random_sum_pairs(n_samples, n_numbers, largest)\n",
+    "print(X, y)\n",
+    "# convert to strings\n",
+    "X, y = to_string(X, y, n_numbers, largest)\n",
+    "print(X, y)\n",
+    "# integer encode\n",
+    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']  # length 12\n",
+    "X, y = integer_encode(X, y, alphabet)\n",
+    "print(X, y)\n",
+    "# one hot encode\n",
+    "X, y = one_hot_encode(X, y, len(alphabet))\n",
+    "print(X, y)  # (1, 5, 12) = (batch, time_step, features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate an encoded dataset\n",
+    "def generate_data(n_samples, n_numbers, largest, alphabet):\n",
+    "    # generate pairs\n",
+    "    X, y = random_sum_pairs(n_samples, n_numbers, largest)\n",
+    "    # convert to strings\n",
+    "    X, y = to_string(X, y, n_numbers, largest)\n",
+    "    # integer encode\n",
+    "    X, y = integer_encode(X, y, alphabet)\n",
+    "    # one hot encode\n",
+    "    X, y = one_hot_encode(X, y, len(alphabet))\n",
+    "    # return as numpy arrays\n",
+    "    X, y = array(X), array(y)\n",
+    "    return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# invert encoding\n",
+    "def invert(seq, alphabet):\n",
+    "    int_to_char = dict((i, c) for i, c in enumerate(alphabet))\n",
+    "    strings = list()\n",
+    "    for pattern in seq:\n",
+    "        string = int_to_char[argmax(pattern)]\n",
+    "        strings.append(string)\n",
+    "    return ''.join(strings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_12 (LSTM)               (None, 100)               45200     \n",
+      "_________________________________________________________________\n",
+      "repeat_vector_4 (RepeatVecto (None, 2, 100)            0         \n",
+      "_________________________________________________________________\n",
+      "lstm_13 (LSTM)               (None, 2, 50)             30200     \n",
+      "_________________________________________________________________\n",
+      "time_distributed_5 (TimeDist (None, 2, 12)             612       \n",
+      "=================================================================\n",
+      "Total params: 76,012\n",
+      "Trainable params: 76,012\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "0\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 3s 3ms/step - loss: 1.9945 - acc: 0.3745\n",
+      "1\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 841us/step - loss: 1.4931 - acc: 0.3915\n",
+      "2\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 838us/step - loss: 1.3540 - acc: 0.4810\n",
+      "3\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 841us/step - loss: 1.2090 - acc: 0.5545\n",
+      "4\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 847us/step - loss: 1.0733 - acc: 0.6125\n",
+      "5\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 856us/step - loss: 0.8860 - acc: 0.7090\n",
+      "6\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 906us/step - loss: 0.7487 - acc: 0.7790\n",
+      "7\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 849us/step - loss: 0.6233 - acc: 0.8495\n",
+      "8\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 858us/step - loss: 0.5413 - acc: 0.8895\n",
+      "9\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 855us/step - loss: 0.4696 - acc: 0.9320\n",
+      "10\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 925us/step - loss: 0.4078 - acc: 0.9545\n",
+      "11\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 906us/step - loss: 0.3543 - acc: 0.9835\n",
+      "12\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 922us/step - loss: 0.3105 - acc: 0.9770\n",
+      "13\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 876us/step - loss: 0.2696 - acc: 0.9820\n",
+      "14\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 887us/step - loss: 0.2548 - acc: 0.9790\n",
+      "15\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 874us/step - loss: 0.2101 - acc: 0.9835\n",
+      "16\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 844us/step - loss: 0.2009 - acc: 0.9795\n",
+      "17\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 829us/step - loss: 0.1624 - acc: 0.9915\n",
+      "18\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 842us/step - loss: 0.1460 - acc: 0.9915\n",
+      "19\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 838us/step - loss: 0.1330 - acc: 0.9950\n",
+      "20\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 797us/step - loss: 0.1196 - acc: 0.9925\n",
+      "21\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 847us/step - loss: 0.1038 - acc: 0.9940\n",
+      "22\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 843us/step - loss: 0.0972 - acc: 0.9895\n",
+      "23\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 853us/step - loss: 0.0874 - acc: 0.9945\n",
+      "24\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 827us/step - loss: 0.0771 - acc: 0.9950\n",
+      "25\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 852us/step - loss: 0.0701 - acc: 0.9955\n",
+      "26\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 847us/step - loss: 0.0627 - acc: 0.9960\n",
+      "27\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 853us/step - loss: 0.0590 - acc: 0.9940\n",
+      "28\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 850us/step - loss: 0.0508 - acc: 0.9960\n",
+      "29\n",
+      "Epoch 1/1\n",
+      "1000/1000 [==============================] - 1s 825us/step - loss: 0.0482 - acc: 0.9940\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_samples = 1000\n",
+    "n_numbers = 2\n",
+    "largest = 10\n",
+    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']\n",
+    "n_chars = len(alphabet)\n",
+    "n_in_seq_length = n_numbers * ceil(log10(largest+1)) + n_numbers - 1\n",
+    "n_out_seq_length = ceil(log10(n_numbers * (largest+1)))\n",
+    "# define LSTM configuration\n",
+    "n_batch = 10\n",
+    "n_epoch = 30\n",
+    "\n",
+    "# create LSTM\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(100, input_shape=(n_in_seq_length, n_chars)))\n",
+    "model.add(RepeatVector(n_out_seq_length))\n",
+    "model.add(LSTM(50, return_sequences=True))\n",
+    "model.add(TimeDistributed(Dense(n_chars, activation='softmax')))\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "print(model.summary())\n",
+    "# train LSTM\n",
+    "for i in range(n_epoch):\n",
+    "    X, y = generate_data(n_samples, n_numbers, largest, alphabet)\n",
+    "    print(i)\n",
+    "    model.fit(X, y, epochs=1, batch_size=n_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected=11, Predicted=11\n",
+      "Expected= 9, Predicted= 9\n",
+      "Expected=15, Predicted=15\n",
+      "Expected= 4, Predicted= 4\n",
+      "Expected=19, Predicted=19\n",
+      "Expected= 8, Predicted= 8\n",
+      "Expected= 6, Predicted= 6\n",
+      "Expected=10, Predicted=10\n",
+      "Expected= 6, Predicted= 6\n",
+      "Expected=11, Predicted=11\n",
+      "Expected= 9, Predicted= 9\n",
+      "Expected= 6, Predicted= 6\n",
+      "Expected=13, Predicted=13\n",
+      "Expected=12, Predicted=12\n",
+      "Expected= 6, Predicted= 6\n",
+      "Expected=15, Predicted=15\n",
+      "Expected=10, Predicted=10\n",
+      "Expected=12, Predicted=12\n",
+      "Expected= 8, Predicted= 8\n",
+      "Expected= 8, Predicted= 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate on some new patterns\n",
+    "X, y = generate_data(n_samples, n_numbers, largest, alphabet)\n",
+    "result = model.predict(X, batch_size=n_batch, verbose=0)\n",
+    "# calculate error\n",
+    "expected = [invert(x, alphabet) for x in y]\n",
+    "predicted = [invert(x, alphabet) for x in result]\n",
+    "# show some examples\n",
+    "for i in range(20):\n",
+    "    print('Expected=%s, Predicted=%s' % (expected[i], predicted[i]))"
+   ]
   }
  ],
  "metadata": {
